2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* io-reauthenticate.c (netfs_S_io_reauthenticate): Use
	ports_get_send_right.

	* dir-lookup.c (netfs_S_dir_lookup): Use ports_get_send_right.
	Deallocate DIRPORT after fshelp_fetch_root.

2000-01-25  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-lookup.c (netfs_S_dir_lookup): Follow symlink despite flags if
	MUSTBEDIR is set (i.e. there was a trailing slash).

1999-10-11  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-readdir.c (netfs_S_dir_readdir): Take new DATA_DEALLOC parameter.

1999-09-13  Roland McGrath  <roland@baalperazim.frob.com>

	* iostubs.c: Reverted changes related to io_map_segment.

1999-09-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* fsstubs.c (netfs_S_io_pathconf): Delete function.
	* io-pathconf.c: New file.
	* Makefile (IOSRCS): Add io-pathconf.c.

1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>

	* iostubs.c (netfs_S_io_map_segment): New function.

1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* file-get-storage-info.c: Add #include <sys/mman.h>.
	* file-get-translator.c: Likewise.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* io-read.c: Add #include <sys/mman.h> for munmap decl.
	* release-protid.c: Likewise.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* file-get-storage-info.c (netfs_S_file_get_storage_info): Use
	mmap instead of vm_allocate.
	* file-get-translator.c (netfs_S_file_get_translator): Likewise.
	* io-read.c (netfs_S_io_read): Likewise.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* io-read.c (netfs_S_io_read): Use munmap instead of
	vm_deallocate.
	* release-protid.c (netfs_release_protid): Likewise.

1999-07-01  Thomas Bushnell, BSG  <tb@mit.edu>

	* nref.c: New file; guts from netfs.h.
	* nrele.c: Likewise.
	* nput.c: Likewise.
	* netfs.h (netfs_nref, netfs_nrele, netfs_nput): Replace inline
	definitions with normal declarations.
	(NETFS_EI): Remove macro.
	* netfs.c: Deleted file.