@@ -1,3 +1,9 @@
+2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* file-exec.c (netfs_S_file_exec): Don't use MAKE_SEND in Hurd
+	RPC. 
+	* init-startup.c (netfs_startup): Likewise.
+
 2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* io-reauthenticate.c (netfs_S_io_reauthenticate): Use
